Moving and Zones

--- a/src/main/resources/assets/dingusprimeacm/lang/en_us.json
+++ b/src/main/resources/assets/dingusprimeacm/lang/en_us.json
@@ -1,4 +1,11 @@
 {
+
+  "itemGroup.dingusprimeacm": "DPACM Main",
+
+
+  "item.dingusprimeacm.zonewand": "Zone Wand",
+
+
   "entity.dingusprimeacm.shopkeeper.none": "Porkea Trader",
   "entity.dingusprimeacm.shopkeeper_furniture.none": "Porkea Trader",
 
